--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/spinner": "^2.0.34",
+    "@nextui-org/system": "^2.2.6",
+    "@nextui-org/theme": "^2.2.11",
     "@prisma/client": "^5.21.1",
     "bcrypt": "^5.1.1",
     "express": "^4.21.1",
+    "framer-motion": "^11.11.11",
     "next": "15.0.1",
     "next-auth": "^4.24.10",
     "react": "^18.3.1",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1"
   },
