--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@nextui-org/spinner": "^2.0.34",
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
@@ -21,7 +22,8 @@
     "react": "^18.3.1",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.1"
+    "react-hook-form": "^7.53.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "22.8.2",
