--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nextui-org/theme": "^2.2.11",
     "@prisma/client": "^5.22.0",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "framer-motion": "^11.11.11",
     "next": "15.0.1",
