--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
     "@types/node": "22.8.2",
