--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
+    "react-sweetalert2": "^0.6.0",
     "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
