--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^11.11.11",
     "next": "15.0.1",
     "next-auth": "^4.24.10",
+    "pnpm": "^9.15.0",
     "react": "^18.3.1",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
